--- a/website/pages/docs/guides/debugging.mdx
+++ b/website/pages/docs/guides/debugging.mdx
@@ -186,9 +186,9 @@ import { css } from "#styled-system/css"
 ```js
 // panda.config.js
 
-module.exports = {
+export default defineConfig({
   importMap: '~/styled-system'
-}
+})
 ```
 
 This will ensure that the paths are resolved correctly, and HMR works as expected.
