docs: Fix typo in Astro guide

--- a/website/pages/docs/installation/astro.mdx
+++ b/website/pages/docs/installation/astro.mdx
@@ -64,7 +64,7 @@ Open your `package.json` file and update the `scripts` section as follows:
 
 ### Configure the content
 
-Add your panda config to your `panda.config.js` file, or wherver panda is configured in your project.
+Add your panda config to your `panda.config.js` file, or wherever panda is configured in your project.
 
 ```js {6}
 import { defineConfig } from '@pandacss/dev'
