Fix bun command for nextjs
The previous command gave an error and I corrected it. Source: [https://bun.sh/guides/ecosystem/nextjs\](https://bun.sh/guides/ecosystem/nextjs)

--- a/website/pages/docs/installation/nextjs.mdx
+++ b/website/pages/docs/installation/nextjs.mdx
@@ -43,7 +43,7 @@ If you don't have Next.js app installed, you can follow the [Create a Next.js ap
     </Tab>
     <Tab>
       ```bash
-      bunx create-next-app@latest --use-bun
+      bunx create next-app@latest --use-bun
       ```
     </Tab>
   </Tabs>
