docs: update guides meta

--- a/website/pages/docs/concepts/styled-system.mdx
+++ b/website/pages/docs/concepts/styled-system.mdx
@@ -3,7 +3,7 @@ title: styled-system
 description: What is the styled-system folder and how does it work?
 ---
 
-# styled-system
+# Styled System
 
 ## What is it?
 
