docs: Adds information about Grid's minChildWidth property

--- a/website/pages/docs/concepts/patterns.mdx
+++ b/website/pages/docs/concepts/patterns.mdx
@@ -514,7 +514,7 @@ The `grid` function accepts the following properties:
 - `gap`: The gap between the elements in the stack.
 - `columnGap`: The gap between the elements in the stack horizontally.
 - `rowGap`: The gap between the elements in the stack vertically.
-- `minChildWidth`: The minimum width of the child elements before wrapping.
+- `minChildWidth`: The minimum width of the child elements before wrapping (must not be used with `columns`).
 
 <Tabs items={['Function', 'JSX']}>
 <Tab>
