docs: update patterns

--- a/website/pages/docs/concepts/patterns.mdx
+++ b/website/pages/docs/concepts/patterns.mdx
@@ -86,7 +86,7 @@ The Stack pattern is a layout primitive that can be used to create a vertical or
 
 The `stack` function accepts the following properties:
 
-- `direction`: The flex direction of the stack. Can be either `vertical` or `horizontal`.
+- `direction`: An alias for the css `flex-direction` property. Default is `column`.
 - `gap`: The gap between the elements in the stack.
 - `align`: An alias for the css `align-items` property.
 - `justify`: An alias for the css `justify-content` property.
