--- a/website/pages/docs/concepts/patterns.mdx
+++ b/website/pages/docs/concepts/patterns.mdx
@@ -5,7 +5,7 @@ description: Patterns are layout primitives that can be used to create robust an
 
 # Patterns
 
-Patterns are layout primitives can be used to create robust and responsive layouts with ease. Panda comes with
+Patterns are layout primitives that can be used to create robust and responsive layouts with ease. Panda comes with
 predefined patterns like stack, hstack, vstack, wrap, etc. These patterns can be used as functions or JSX elements.
 
 > Think of patterns as a set of predefined styles to reduce repetition and improve readability. You can override the properties as needed, just like in the `css` function.
