--- a/website/pages/docs/installation/svelte.mdx
+++ b/website/pages/docs/installation/svelte.mdx
@@ -210,7 +210,7 @@ export default defineConfig({
 })
 ```
 
-If you are using Storybook, you will need to add a `viteFinal` section to `.storybook/main.js`:
+If you’re using Storybook for a SvelteKit project, you need to replicate the same Vite server config changes. In your .storybook folder, you likely have a `main.js` (or `vite.config.js` in older Storybook versions). Update it as follows:
 
 ```js filename="main.js"
 import { defineConfig, mergeConfig } from 'vite';
