--- a/website/pages/docs/installation/svelte.mdx
+++ b/website/pages/docs/installation/svelte.mdx
@@ -218,7 +218,7 @@ import { defineConfig, mergeConfig } from 'vite';
 /** @type { import('@storybook/sveltekit').StorybookConfig } */
 
 const config = {
-  // ...
+  // other Storybook config...
   viteFinal: async (config) => {
     return mergeConfig(
       config,
