docs(website): fix minor error in  utilities.mdx example

--- a/website/pages/docs/customization/utilities.mdx
+++ b/website/pages/docs/customization/utilities.mdx
@@ -117,7 +117,7 @@ Now, we can use the `borderX` or `bx` property in our components.
 import { css } from '../styled-system/css'
 
 function App() {
-  return <div className={css({ borderX: 'sm' })} />
+  return <div className={css({ borderX: '2px' })} />
 }
 ```
 
