docs: correct condition names

--- a/website/content/docs/concepts/conditional-styles.mdx
+++ b/website/content/docs/concepts/conditional-styles.mdx
@@ -62,7 +62,7 @@ Let's say you want to change the background color of a button when it's focused 
 
 Panda includes a set of common pseudo states that you can use to style your components:
 
-- Pseudo Class: `_hover`, `_active`, `_focus`, `_focus-visible`, `_focus-within`, `_disabled`
+- Pseudo Class: `_hover`, `_active`, `_focus`, `_focusVisible`, `_focusWithin`, `_disabled`
 - Pseudo Element: `_before`, `_after`
 - Media Query: `sm`, `md`, `lg`, `xl`, `2xl`
 - Data Attribute Selector: `_horizontal`, `_vertical`, `_portrait`, `_landscape`
