docs: remove unused styled from Making your own styled components chapter

--- a/website/pages/docs/concepts/style-props.mdx
+++ b/website/pages/docs/concepts/style-props.mdx
@@ -321,7 +321,7 @@ To make a custom JSX component that accepts style props, Use the `splitCssProps`
 > For this to work correctly, set the `jsxFramework` to the framework you're using in your panda config.
 
 ```tsx
-import { splitCssProps, styled } from '../styled-system/jsx'
+import { splitCssProps } from '../styled-system/jsx'
 import type { HTMLStyledProps } from '../styled-system/types'
 
 export function Component(props: HTMLStyledProps<'div'>) {
