docs: update Vite configuration and enhance getting started guide

--- a/website/pages/docs/installation/vite.mdx
+++ b/website/pages/docs/installation/vite.mdx
@@ -114,6 +114,9 @@ export default defineConfig({
  // Files to exclude
  exclude: [],
 
+ // Generates JSX utilities with options of React, Preact, Qwik, Solid, Vue 
+ jsxFramework: 'react',
+
  // The output directory for your css system
  outdir: "styled-system",
 })
