--- a/website/pages/docs/overview/getting-started.mdx
+++ b/website/pages/docs/overview/getting-started.mdx
@@ -19,7 +19,7 @@ Panda combines the developer experience of CSS-in-JS and the performance of atom
 - [Panda CLI](/docs/installation/cli):
   The simplest way to use Panda is with the Panda CLI tool.
 
-- [Using PostCSS](/docs/installation/postcss):
+- [Using PostCSS](/docs/installation/postcss): (**Recommended**)
   Installing Panda as a PostCSS plugin is the recommended way to integrate it with your project.
 
 ### Framework Guides
